# frfojo

./: .gitignore  .gitmodules  .hintrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.cursor/skills/: a11y.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/discord_helper/: mod.rs
src-tauri/src/handlers/: mod.rs
src-tauri/src/setups/: window.rs
webs/bobo-tool/: index.html  package.json  tsconfig.app.json  vite.config.ts
webs/bobo-tool/public/lib/: application.js  game_manager.js
webs/bobo-tool/scripts/: fetch-momo-rms-mvp-assets.mjs  gen-card-set-data.mjs  gen-equipment-set-data.mjs  gen-item-object-from-azh.mjs
webs/bobo-tool/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
webs/bobo-tool/src/routes/: ffj.tsx  index.tsx
webs/bobo-tool/types/: global.d.ts
webs/main/: README.md  index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1734321110128-904298d6b767d.mjs
webs/main/public/: keep-timer.js
webs/main/src/: App.tsx  index.css  main.tsx
webs/main/src/contexts/: AppConfig.tsx  GlobalStates.tsx
webs/main/src/db/: index.ts
webs/main/types/: common.d.ts  global.d.ts  mui.d.ts
webs/opendota/: index.html  opendota.openapi.json  package.json  tsconfig.app.json  vite.config.ts
webs/opendota/src/: App.tsx  Initializing.tsx  index.css  main.tsx
webs/opendota/types/: global.d.ts  opendota.d.ts
webs/user-center/: boboan.net.openapi.json  eslint.config.js  package.json  system_prompt.md  vite.config.ts
webs/user-center/src/: App.tsx  index.css  main.tsx
(+315 files in other folders)
