[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "shell-open", "dialog-all", "os-all", "window-hide", "window-close", "window-maximize", "window-minimize", "window-unmaximize", "window-start-dragging", "window-unminimize", "window-show"] }
tokio = {version = "1.35.0", features = ["full"] }
open = "5"
chrono = "0.4.38"

[target.'cfg(target_os = "macos")'.dependencies]
# 这些依赖仅在macOS系统上生效
cocoa = "0.25.0"

[target.'cfg(target_os = "windows")'.dependencies]
# 这些依赖仅在windows系统上生效
window-shadows = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
